--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Меню</h1>
-    <a href="file:///D:/GitProjectsINF/product.html">
+    <a href="product.html">
     Пицца "TwoПицца" <br> <img src="pics/PN_Classic_MeatSupreme_1920x1440.jpg" width="300px">
     </a>
 </body>
