--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 <body>
     <h1>"Траттория Альдини"</h1>
     <hr>
-    <a href="file:///D:/GitProjectsINF/catalog.html">Каталог</a>
+    <a href="catalog.html">Каталог</a>
     <h3>Описание ресторана</h3>
     <p>Ресторан итальянской кухни "Траттория Альдини" познакомит 
         вас с шедевральными блюдами, рецепты которых бережно 
