--- a/main.html
+++ b/main.html
@@ -12,7 +12,6 @@
         вас с шедевральными блюдами, рецепты которых бережно 
         хранятся веками и передаются из поколения в поколение. 
         С нетерпением ждём вашего визита. Бон аппетит!~</p>
-    <img src="pics/331.png">
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" Здесь лежит секрет нашего ресторана></a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="pics/331.png"> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> "Здесь лежит секрет нашего ресторана"</a>
 </body>
 </html>
