--- a/product.html
+++ b/product.html
@@ -10,5 +10,15 @@
     <p>Много мяса. Мало теста.</p>
     <p>Шлёпа одобряет!<img src="pics/E4opxQ8XwAAdlm_.jpg" width="50px"></p>
     <h3>Цена: Бесценно, но для вас <i>♂300 bucks♂</i></h3>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <h3>Наш адрес:</h3>
+    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab9b1045255e8ab8b07f8f8e592a2227dd3379edcfaa7b4006dbe1ed35c465c53&amp;source=constructor" width="700" height="400" frameborder="0"></iframe>
+    <h3>Наш телефон: 8(800)-555-35-35</h3>
 </body>
 </html>
