--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>Пицца "TwoПицца"</h1>
+    <h3><a href="index.html">Главная</a>&nbsp<a href="catalog.html">Меню</a></h3> 
     <img src="pics/PN_Classic_MeatSupreme_1920x1440.jpg" width="300px">
     <h3>Описание</h3>
     <p>Много мяса. Мало теста.</p>
