--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Главная</title>
 </head>
 <body>
-    <h1>"Траттория Альдини"</h1>
+    <h1>«Траттория Альдини»</h1>
     <hr>
-    <h3><a href="index.html">Главная</a>&nbsp<a href="catalog.html">Меню</a></h3> 
+    <h3><a href="index.html">Главная</a>&nbsp<a href="catalog.html">Меню</a>&nbsp<a href="about.html">О нас</a></h3> 
     <h3>Описание ресторана</h3>
-    <p>Ресторан итальянской кухни "Траттория Альдини" познакомит 
+    <p>Ресторан итальянской кухни «Траттория Альдини» познакомит 
         вас с шедевральными блюдами, рецепты которых бережно 
         хранятся веками и передаются из поколения в поколение. 
         С нетерпением ждём вашего визита. Бон аппетит!~</p>
@@ -20,8 +20,6 @@
     <br>
     <br>
     <hr>
-    <h3>Наш адрес:</h3>
-    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab9b1045255e8ab8b07f8f8e592a2227dd3379edcfaa7b4006dbe1ed35c465c53&amp;source=constructor" width="700" height="400" frameborder="0"></iframe>
-    <h3>Наш телефон: 8(800)-555-35-35</h3>
+    <p>© Михаил Романчук, 2021 - 2021</p>
 </body>
 </html>
