--- a/product.html
+++ b/product.html
@@ -4,8 +4,8 @@
     <title>TwoПицца</title>
 </head>
 <body>
-    <h1>Пицца "TwoПицца"</h1>
-    <h3><a href="index.html">Главная</a>&nbsp<a href="catalog.html">Меню</a></h3> 
+    <h1>Пицца «TwoПицца»</h1>
+    <h3><a href="index.html">Главная</a>&nbsp<a href="catalog.html">Меню</a>&nbsp<a href="about.html">О нас</a></h3> 
     <img src="pics/PN_Classic_MeatSupreme_1920x1440.jpg" width="300px">
     <h3>Описание</h3>
     <p>Много мяса. Мало теста.</p>
@@ -18,8 +18,6 @@
     <br>
     <br>
     <hr>
-    <h3>Наш адрес:</h3>
-    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab9b1045255e8ab8b07f8f8e592a2227dd3379edcfaa7b4006dbe1ed35c465c53&amp;source=constructor" width="700" height="400" frameborder="0"></iframe>
-    <h3>Наш телефон: 8(800)-555-35-35</h3>
+    <p>© Михаил Романчук, 2021 - 2021</p>
 </body>
 </html>
