--- a/catalog.html
+++ b/catalog.html
@@ -5,15 +5,15 @@
 </head>
 <body>
     <h1>Меню</h1>
-    <h3><a href="index.html">Главная</a>&nbsp<a href="catalog.html">Меню</a></h3> 
+    <h3><a href="index.html">Главная</a>&nbsp<a href="catalog.html">Меню</a>&nbsp<a href="about.html">О нас</a></h3>
     <hr>
     <a href="product.html">
-    Пицца "TwoПицца" <br> <img src="pics/PN_Classic_MeatSupreme_1920x1440.jpg" width="300px">
+    Пицца «TwoПицца» <br> <img src="pics/PN_Classic_MeatSupreme_1920x1440.jpg" width="300px">
     </a>
     <hr>
-    <a href="">Пицца "Маргарита" <br> <img src="pics/Margarita.jpg" width="300px"></a>
+    <a href="">Пицца «Маргарита» <br> <img src="pics/Margarita.jpg" width="300px"></a>
     <hr>
-    <a href="">Паста "Карбонара" <br> <img src="pics/carbonara-015.jpg" width="300px"></a>
+    <a href="">Паста «Карбонара» <br> <img src="pics/carbonara-015.jpg" width="300px"></a>
     <br>
     <br>
     <br>
@@ -21,8 +21,6 @@
     <br>
     <br>
     <hr>
-    <h3>Наш адрес:</h3>
-    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab9b1045255e8ab8b07f8f8e592a2227dd3379edcfaa7b4006dbe1ed35c465c53&amp;source=constructor" width="700" height="400" frameborder="0"></iframe>
-    <h3>Наш телефон: 8(800)-555-35-35</h3>
+    <p>© Михаил Романчук, 2021 - 2021</p>
 </body>
 </html>
